Bootstrap Organizations Module (#134)
