# grassroots-backend/openAPI.json
@@ -49,11 +49,11 @@
         },
         "type": "object"
       },
-      "CreateBulkContactRequestDto": {
+      "CreateBulkContactRequestDTO": {
         "properties": {
           "contacts": {
             "items": {
-              "$ref": "#/components/schemas/CreateContactRequestDto"
+              "$ref": "#/components/schemas/CreateContactRequestDTO"
             },
             "type": "array"
           }
@@ -73,7 +73,7 @@
         "required": ["ids"],
         "type": "object"
       },
-      "CreateContactRequestDto": {
+      "CreateContactRequestDTO": {
         "properties": {
           "email": {
             "format": "email",
@@ -90,6 +90,28 @@
           }
         },
         "required": ["email", "firstName", "lastName", "phoneNumber"],
+        "type": "object"
+      },
+      "CreateOrganizationRequestDTO": {
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "parentID": {
+            "minimum": 1,
+            "type": "number"
+          }
+        },
+        "required": ["name", "parentID"],
+        "type": "object"
+      },
+      "CreateOrganizationRootRequestDTO": {
+        "properties": {
+          "name": {
+            "type": "string"
+          }
+        },
+        "required": ["name"],
         "type": "object"
       },
       "GetContactByIDResponseDTO": {
@@ -121,6 +143,35 @@
             "$ref": "#/components/schemas/UserDTO"
           }
         },
+        "type": "object"
+      },
+      "OrganizationDTO": {
+        "properties": {
+          "id": {
+            "minimum": 0,
+            "type": "number"
+          },
+          "name": {
+            "type": "string"
+          },
+          "parentId": {
+            "minimum": 0,
+            "type": "number"
+          }
+        },
+        "required": ["id", "name"],
+        "type": "object"
+      },
+      "OrganizationListDTO": {
+        "properties": {
+          "organizations": {
+            "items": {
+              "$ref": "#/components/schemas/OrganizationDTO"
+            },
+            "type": "array"
+          }
+        },
+        "required": ["organizations"],
         "type": "object"
       },
       "PaginatedContactResponseDTO": {
@@ -442,7 +493,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/CreateContactRequestDto"
+                "$ref": "#/components/schemas/CreateContactRequestDTO"
               }
             }
           },
@@ -481,7 +532,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/CreateBulkContactRequestDto"
+                "$ref": "#/components/schemas/CreateBulkContactRequestDTO"
               }
             }
           },
@@ -587,6 +638,187 @@
           }
         },
         "tags": ["Contacts"]
+      }
+    },
+    "/organizations": {
+      "get": {
+        "operationId": "OrganizationsController_findAll",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/OrganizationListDTO"
+                }
+              }
+            },
+            "description": ""
+          },
+          "401": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ValidationErrorOutDTO"
+                }
+              }
+            },
+            "description": "Validation failed"
+          }
+        },
+        "tags": ["Organizations"]
+      },
+      "post": {
+        "operationId": "OrganizationsController_create",
+        "parameters": [],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateOrganizationRequestDTO"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "201": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/OrganizationDTO"
+                }
+              }
+            },
+            "description": ""
+          },
+          "401": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ValidationErrorOutDTO"
+                }
+              }
+            },
+            "description": "Validation failed"
+          }
+        },
+        "tags": ["Organizations"]
+      }
+    },
+    "/organizations/ancestors-of/{id}": {
+      "get": {
+        "operationId": "OrganizationsController_getAncestors",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "number"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/OrganizationListDTO"
+                }
+              }
+            },
+            "description": ""
+          },
+          "401": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ValidationErrorOutDTO"
+                }
+              }
+            },
+            "description": "Validation failed"
+          }
+        },
+        "tags": ["Organizations"]
+      }
+    },
+    "/organizations/create-root": {
+      "post": {
+        "operationId": "OrganizationsController_createRoot",
+        "parameters": [],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateOrganizationRootRequestDTO"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "201": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/OrganizationDTO"
+                }
+              }
+            },
+            "description": ""
+          },
+          "401": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ValidationErrorOutDTO"
+                }
+              }
+            },
+            "description": "Validation failed"
+          }
+        },
+        "tags": ["Organizations"]
+      }
+    },
+    "/organizations/{id}": {
+      "get": {
+        "operationId": "OrganizationsController_findById",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "number"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/OrganizationDTO"
+                }
+              }
+            },
+            "description": ""
+          },
+          "401": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ValidationErrorOutDTO"
+                }
+              }
+            },
+            "description": "Validation failed"
+          }
+        },
+        "tags": ["Organizations"]
       }
     },
     "/users": {
